refactor categories, sources and author filter
